@@ -45,13 +45,20 @@ The rules for this file:
     ...) in addition to providing all trajectories as a list,
     i.e. Universe(topology, [traj1, traj2, ...])
   * added support for YASP and IBIsCO formats (.trz) (Issue 152)
-  * new methods for AtomGroup: packintobox() (only orthorhombic boxes)
+  * new methods for AtomGroup: packIntoBox([inplace=True]) 
   * added non-standard "extended" PDB format (XPDB) that reads
     five-digit residue numbers
   * util.convert_aa_code() recognizes non-standard residue names such
     as HSE, GLUH, GLH, ...
   * added new geometrics selections: sphlayer, sphzone, cylayer, cyzone
   * added TopologyDict and TopologyGroup classes for bond analysis
+  * added calc_bonds, calc_angles and calc_torsions cython functions to 
+    core.distances for quickly calculating bond information
+  * added applyPBC(coords, box) function to core.distances to move 
+    coordinates to within the primary unit cell
+  * many AtomGroup methods now support 'pbc' flag to move atoms to within
+    primary unitcell before calculation.  This behaviour can also be 
+    toggled using the core.flags['use_pbc'] flag (Issue 156)
 
   Changes
 
